<resources>
    <string name="app_name">\t\t\t\t\t\t\t\t\t\t\t\t\t\tCurrency Converter</string>
    <string name="app_name_land">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tCurrency Converter</string>
    <string name="current_value_string">Exchange Rate</string>
    <string name="currency_calculator_text">Currency Calculator</string>
    <string name="get_value_title_text">LIVE EXCHANGE RATE</string>
    <string name="local_currency_text">Local Currency:</string>
    <string name="foreign_currency_text">Foreign Currency:</string>
    <string name="get_your_money_title_text">CURRENCY CALCULATOR</string>
    <string name="amount_of_currency_text">Amount:</string>
    <string name="enter_amount_edit_text_hint">Enter amount</string>
    <string name="convert_text">CONVERT NOW!</string>
    <string name="might_take_a_bit_to_update_text">Fetching result(…, &#8230;)</string>
    <string name="portrait_a">portraita</string>
    <string-array name="countries_and_currency_name_array">
        <item>AED - UAE dirham</item>
        <item>AFN - Afghan afghani</item>
        <item>ALL - Albanian lek</item>
        <item>AMD - Armenian dram</item>
        <item>AOA - Angolan kwanza</item>
        <item>ARS - Argentine peso</item>
        <item>AUD - Australian dollar</item>
        <item>AWG - Aruban florin</item>
        <item>AZN - Azerbaijani manat</item>
        <item>BAM - Bosnia Herzegovina marka</item>
        <item>BBD - Barbadian dollar</item>
        <item>BDT - Bangladeshi taka</item>
        <item>BGN - Bulgarian lev</item>
        <item>BHD - Bahraini dinar</item>
        <item>BIF - Burundi franc</item>
        <item>BND - Brunei dollar</item>
        <item>BOB - Bolivian boliviano</item>
        <item>BRL - Brazilian real</item>
        <item>BSD - Bahamian dollar</item>
        <item>BTN - Bhutanese ngultrum</item>
        <item>BWP - Botswana pula</item>
        <item>BYN - New Belarusian ruble</item>
        <item>BZD - Belize dollar</item>
        <item>CAD - Canadian dollar</item>
        <item>CDF - Congolese franc</item>
        <item>CHF - Swiss Franc</item>
        <item>CLP - Chilean peso</item>
        <item>CNY - Chinese renminbi</item>
        <item>COP - Colombian peso</item>
        <item>CRC - Costa Rican colon</item>
        <item>CUP - Cuban peso</item>
        <item>CZK - Czech koruna</item>
        <item>DJF - Djiboutian franc</item>
        <item>DKK - Danish krone</item>
        <item>DOP - Dominican peso</item>
        <item>DZD - Algerian dinar</item>
        <item>EGP - Egyptian pound</item>ads
        <item>ERN - Eritrean nakfa</item>
        <item>ETB - Ethiopian birr</item>
        <item>EUR - European Euro</item>
        <item>FJD - Fijian dollar</item>
        <item>GBP - British pound</item>
        <item>GEL - Georgian lari</item>
        <item>GHS - Ghanaian cedi</item>
        <item>GIP - Gibraltar pound</item>
        <item>GMD - Gambian dalasi</item>
        <item>GNF - Guinean franc</item>
        <item>GTQ - Guatemalan quetzal</item>
        <item>GYD - Guyanese dollar</item>
        <item>HKD - Hong Kong dollar</item>
        <item>HNL - Honduran lempira</item>
        <item>HRK - Croatian kuna</item>
        <item>HTG - Haitian gourde</item>
        <item>HUF - Hungarian forint</item>
        <item>IDR - Indonesian rupiah</item>
        <item>ILS - Israeli new sheqel</item>
        <item>INR - Indian rupee</item>
        <item>IQD - Iraqi dinar</item>
        <item>IRR - Iranian rial</item>
        <item>ISK - Icelandic króna</item>
        <item>JMD - Jamaican dollar</item>
        <item>JOD - Jordanian dinar</item>
        <item>JPY - Japanese yen</item>
        <item>KES - Kenyan shilling</item>
        <item>KGS - Kyrgyzstani som</item>
        <item>KHR - Cambodian riel</item>
        <item>KMF - Comorian franc</item>
        <item>KPW - North Korean won</item>
        <item>KRW - South Korean won</item>
        <item>KWD - Kuwaiti dinar</item>
        <item>KYD - Cayman Islands dollar</item>
        <item>KZT - Kazakhstani tenge</item>
        <item>LAK - Lao kip</item>
        <item>LBP - Lebanese lira</item>
        <item>LKR - Sri Lankan rupee</item>
        <item>LRD - Liberian dollar</item>
        <item>LSL - Lesotho loti</item>
        <item>LVL - Latvian lats</item>
        <item>LYD - Libyan dinar</item>
        <item>MAD - Moroccan dirham</item>
        <item>MDL - Moldovan leu</item>
        <item>MGA - Malagasy ariary</item>
        <item>MKD - Macedonian denar</item>
        <item>MMK - Myanma kyat</item>
        <item>MNT - Mongolian tugrik</item>
        <item>MOP - Macanese pataca</item>
        <item>MRO - Mauritanian ouguiya</item>
        <item>MUR - Mauritian rupee</item>
        <item>MVR - Maldivian rufiyaa</item>
        <item>MWK - Malawian kwacha</item>
        <item>MXN - Mexican peso</item>
        <item>MYR - Malaysian ringgit</item>
        <item>MZN - Mozambican metical</item>
        <item>NAD - Namibian dollar</item>
        <item>NGN - Nigerian naira</item>
        <item>NIO - Nicaraguan cordoba</item>
        <item>NOK - Norwegian krone</item>
        <item>NPR - Nepalese rupee</item>
        <item>NZD - New Zealand dollar</item>
        <item>OMR - Omani rial</item>
        <item>PAB - Panamanian balboa</item>
        <item>PEN - Peruvian nuevo sol</item>
        <item>PGK - Papua New Guinean kina</item>
        <item>PHP - Philippine peso</item>
        <item>PKR - Pakistani rupee</item>
        <item>PLN - Polish zloty</item>
        <item>PYG - Paraguayan guarani</item>
        <item>QAR - Qatari riyal</item>
        <item>RON - Romanian leu</item>
        <item>RSD - Serbian dinar</item>
        <item>RUB - Russian ruble</item>
        <item>RWF - Rwandan franc</item>
        <item>SAR - Saudi riyal</item>
        <item>SBD - Solomon Islands dollar</item>
        <item>SCR - Seychellois rupee</item>
        <item>SDG - Sudanese pound</item>
        <item>SEK - Swedish krona</item>
        <item>SGD - Singapore dollar</item>
        <item>SHP - Saint Helena pound</item>
        <item>SLL - Sierra Leonean leone</item>
        <item>SOS - Somali shilling</item>
        <item>SRD - Surinamese dollar</item>
        <item>STD - Sao Tome and Principe dobra</item>
        <item>SYP - Syrian pound</item>
        <item>SZL - Swazi lilangeni</item>
        <item>THB - Thai baht</item>
        <item>TJS - Tajikistani somoni</item>
        <item>TKL - Turkish new lira</item>
        <item>TMT - Turkmenistan manat</item>
        <item>TND - Tunisian dinar</item>
        <item>TOP - Paanga</item>
        <item>TTD - Trinidad and Tobago dollar</item>
        <item>TWD - New Taiwan dollar</item>
        <item>TZS - Tanzanian shilling</item>
        <item>UAH - Ukrainian hryvnia</item>
        <item>UGX - Ugandan shilling</item>
        <item>USD - U.S. Dollar</item>
        <item>UYU - Uruguayan peso</item>
        <item>UZS - Uzbekistani som</item>
        <item>VEF - Venezuelan bolivar</item>
        <item>VND - Vietnamese dong</item>
        <item>VUV - Vanuatu vatu</item>
        <item>WST - Samoan tala</item>
        <item>XAF - Central African CFA franc</item>
        <item>XCD - East Caribbean dollar</item>
        <item>XOF - West African CFA franc</item>
        <item>XPF - CFP franc</item>
        <item>YER - Yemeni rial</item>
        <item>ZAR - South African rand</item>
        <item>ZMW - Zambian kwacha</item>
    </string-array>
</resources>
