<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/barBackgroundColor"/>
        <TextView
                android:id="@+id/calculate_your_price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_your_money_title_text"
                android:textColor="@color/black"
                android:textStyle="bold|italic"
                android:background="@drawable/translucent_backgrounds"
                android:gravity="center"
                android:textSize="26sp"/>
    <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/lightBlue"/>
    <GridLayout
            android:id="@+id/calculator_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="7"
            android:alpha="0.6"
            android:background="@drawable/translucent_backgrounds">
        <TableRow
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
            <TextView
                    android:id="@+id/calculator_local_currency_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="2dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="3dp"
                    android:background="@color/white"
                    android:text="@string/local_currency_text"
                    android:textSize="20sp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/black"/>
            <Spinner
                    android:id="@+id/calculator_origin_currency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:pointerIcon="arrow"/>
        </TableRow>
        <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_rowSpan="1"
                android:layout_columnSpan="2"
                android:backgroundTint="@color/lightBlue"
                android:background="?android:attr/listDivider"/>
        <TableRow
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
            <TextView
                    android:id="@+id/calculator_foreign_currency_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="2dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="3dp"
                    android:background="@color/white"
                    android:text="@string/foreign_currency_text"
                    android:textSize="20sp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/black"/>
            <Spinner
                    android:id="@+id/calculator_destination_currency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:pointerIcon="arrow"/>
        </TableRow>
        <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:backgroundTint="@color/lightBlue"
                android:layout_rowSpan="1"
                android:layout_columnSpan="2"
                android:background="?android:attr/listDivider"/>
        <TableRow>
            <TextView
                    android:id="@+id/calculator_amount_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="@string/amount_of_currency_text"
                    android:textSize="20sp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/black"/>
            <EditText
                    android:id="@+id/calculator_amount_edit_text"
                    android:hint="@string/enter_amount_edit_text_hint"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/grey"
                    android:textStyle="italic|bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </TableRow>
    </GridLayout>
    <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/barBackgroundColor"/>
    <Button
            android:id="@+id/calculator_convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_text"
            android:background="@drawable/button_properties"
            android:layout_gravity="center"/>
    <View
            android:id="@+id/divider10"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/barBackgroundColor"/>
    <TextView
            android:id="@+id/result_calculator_text_view"
            android:background="@drawable/translucent_backgrounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAppearance="@color/black"
            android:textStyle="italic|bold"
            android:textSize="50sp"
            android:alpha="0.6"
            android:paddingTop="50dp"
            android:paddingBottom="30dp"/>
    <View
            android:id="@+id/divider11"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/barBackgroundColor"/>
</LinearLayout>